Fix pre-commit configuration
Relevant changes are only in .pre-commit-config.yaml

* run black on notebooks via pre-commit
* set proper line width (pyproject.toml is not used if we are running things from the repo root)
* compatible line width for black + isort
* fix json error in binder/overview.ipynb
* re-blacken everything

--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -34,7 +34,8 @@
     "\n",
     "* [Interfacing JAX](../python/examples/example_jax/ExampleJax.ipynb)\n",
     "\n",
-    "  Provides guidance on how to combine AMICI with differential programming frameworks such as JAX.\n"
+    "  Provides guidance on how to combine AMICI with differential programming frameworks such as JAX.\n",
+    "\n",
     "* [Efficient spline interpolation](../python/examples/example_splines/ExampleSplines.ipynb)\n",
     "\n",
     "  Shows how to add annotated spline formulas to existing SBML models in order to speed up AMICI's model import.\n",
