--- a/documentation/ExampleJax.ipynb
+++ b/documentation/ExampleJax.ipynb
@@ -46,10 +46,10 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'tmp/benchmark-models'...\n",
-      "remote: Enumerating objects: 336, done.\u001B[K\n",
-      "remote: Counting objects: 100% (336/336), done.\u001B[K\n",
-      "remote: Compressing objects: 100% (285/285), done.\u001B[K\n",
-      "remote: Total 336 (delta 88), reused 216 (delta 39), pack-reused 0\u001B[K\n",
+      "remote: Enumerating objects: 336, done.\u001b[K\n",
+      "remote: Counting objects: 100% (336/336), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (285/285), done.\u001b[K\n",
+      "remote: Total 336 (delta 88), reused 216 (delta 39), pack-reused 0\u001b[K\n",
       "Receiving objects: 100% (336/336), 2.11 MiB | 7.48 MiB/s, done.\n",
       "Resolving deltas: 100% (88/88), done.\n"
      ]
@@ -58,7 +58,8 @@
    "source": [
     "!git clone --depth 1 https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab.git tmp/benchmark-models || (cd tmp/benchmark-models && git pull)\n",
     "from pathlib import Path\n",
-    "folder_base = Path('.') / \"tmp\" / \"benchmark-models\" / \"Benchmark-Models\""
+    "\n",
+    "folder_base = Path(\".\") / \"tmp\" / \"benchmark-models\" / \"Benchmark-Models\""
    ]
   },
   {
@@ -77,6 +78,7 @@
    "outputs": [],
    "source": [
     "import petab\n",
+    "\n",
     "model_name = \"Boehm_JProteomeRes2014\"\n",
     "yaml_file = folder_base / model_name / (model_name + \".yaml\")\n",
     "petab_problem = petab.Problem.from_yaml(yaml_file)"
@@ -570,6 +572,7 @@
    ],
    "source": [
     "from amici.petab_import import import_petab_problem\n",
+    "\n",
     "amici_model = import_petab_problem(petab_problem, force_compile=True)"
    ]
   },
@@ -606,14 +609,16 @@
    "source": [
     "from amici.petab_objective import simulate_petab\n",
     "import amici\n",
+    "\n",
     "amici_solver = amici_model.getSolver()\n",
     "amici_solver.setSensitivityOrder(amici.SensitivityOrder.first)\n",
     "\n",
+    "\n",
     "def amici_hcb_base(parameters: jnp.array):\n",
     "    return simulate_petab(\n",
-    "        petab_problem, \n",
-    "        amici_model, \n",
-    "        problem_parameters=dict(zip(petab_problem.x_free_ids, parameters)), \n",
+    "        petab_problem,\n",
+    "        amici_model,\n",
+    "        problem_parameters=dict(zip(petab_problem.x_free_ids, parameters)),\n",
     "        scaled_parameters=True,\n",
     "        solver=amici_solver,\n",
     "    )"
@@ -635,13 +640,14 @@
    "outputs": [],
    "source": [
     "def amici_hcb_llh(parameters: jnp.array):\n",
-    "    return amici_hcb_base(parameters)['llh']\n",
+    "    return amici_hcb_base(parameters)[\"llh\"]\n",
+    "\n",
     "\n",
     "def amici_hcb_sllh(parameters: jnp.array):\n",
-    "    sllh = amici_hcb_base(parameters)['sllh']\n",
-    "    return jnp.asarray(tuple(\n",
-    "        sllh[par_id] for par_id in petab_problem.x_free_ids\n",
-    "    ))"
+    "    sllh = amici_hcb_base(parameters)[\"sllh\"]\n",
+    "    return jnp.asarray(\n",
+    "        tuple(sllh[par_id] for par_id in petab_problem.x_free_ids)\n",
+    "    )"
    ]
   },
   {
@@ -663,6 +669,8 @@
     "from jax import custom_jvp\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
     "@custom_jvp\n",
     "def jax_objective(parameters: jnp.array):\n",
     "    return hcb.call(\n",
@@ -695,7 +703,9 @@
     "    sllh = hcb.call(\n",
     "        amici_hcb_sllh,\n",
     "        parameters,\n",
-    "        result_shape=jax.ShapeDtypeStruct((petab_problem.parameter_df.estimate.sum(),), np.float64),\n",
+    "        result_shape=jax.ShapeDtypeStruct(\n",
+    "            (petab_problem.parameter_df.estimate.sum(),), np.float64\n",
+    "        ),\n",
     "    )\n",
     "    return llh, sllh.dot(x_dot)"
    ]
@@ -717,19 +727,25 @@
    "source": [
     "from jax import value_and_grad\n",
     "\n",
-    "parameter_scales = petab_problem.parameter_df.loc[petab_problem.x_free_ids, petab.PARAMETER_SCALE].values\n",
+    "parameter_scales = petab_problem.parameter_df.loc[\n",
+    "    petab_problem.x_free_ids, petab.PARAMETER_SCALE\n",
+    "].values\n",
+    "\n",
     "\n",
     "@jax.jit\n",
     "@value_and_grad\n",
     "def jax_objective_with_parameter_transform(parameters: jnp.array):\n",
-    "    par_scaled = jnp.asarray(tuple(\n",
-    "        value if scale == petab.LIN\n",
-    "        else jnp.log(value) if scale == petab.LOG\n",
-    "        else jnp.log10(value)\n",
-    "        for value, scale in zip(parameters, parameter_scales)\n",
-    "    ))\n",
-    "    return jax_objective(par_scaled)\n",
-    "    "
+    "    par_scaled = jnp.asarray(\n",
+    "        tuple(\n",
+    "            value\n",
+    "            if scale == petab.LIN\n",
+    "            else jnp.log(value)\n",
+    "            if scale == petab.LOG\n",
+    "            else jnp.log10(value)\n",
+    "            for value, scale in zip(parameters, parameter_scales)\n",
+    "        )\n",
+    "    )\n",
+    "    return jax_objective(par_scaled)"
    ]
   },
   {
@@ -755,7 +771,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(petab_problem.x_nominal_free)"
+    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(\n",
+    "    petab_problem.x_nominal_free\n",
+    ")"
    ]
   },
   {
@@ -777,7 +795,9 @@
     "# TODO remove me as soon as sllh in simulate_petab is fixed\n",
     "sllh = {\n",
     "    name: value / (np.log(10) * par_value)\n",
-    "    for (name, value), par_value in zip(r['sllh'].items(), petab_problem.x_nominal_free)\n",
+    "    for (name, value), par_value in zip(\n",
+    "        r[\"sllh\"].items(), petab_problem.x_nominal_free\n",
+    "    )\n",
     "}"
    ]
   },
@@ -802,7 +822,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.Series(dict(amici=r['llh'], jax=float(llh_jax)))"
+    "\n",
+    "pd.Series(dict(amici=r[\"llh\"], jax=float(llh_jax)))"
    ]
   },
   {
@@ -905,7 +926,9 @@
     }
    ],
    "source": [
-    "pd.DataFrame(index=sllh.keys(), data=dict(amici=sllh.values(), jax=np.asarray(sllh_jax)))"
+    "pd.DataFrame(\n",
+    "    index=sllh.keys(), data=dict(amici=sllh.values(), jax=np.asarray(sllh_jax))\n",
+    ")"
    ]
   },
   {
@@ -925,7 +948,9 @@
    "outputs": [],
    "source": [
     "jax.config.update(\"jax_enable_x64\", True)\n",
-    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(petab_problem.x_nominal_free)"
+    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(\n",
+    "    petab_problem.x_nominal_free\n",
+    ")"
    ]
   },
   {
@@ -956,7 +981,7 @@
     }
    ],
    "source": [
-    "pd.Series(dict(amici=r['llh'], jax=float(llh_jax)))"
+    "pd.Series(dict(amici=r[\"llh\"], jax=float(llh_jax)))"
    ]
   },
   {
@@ -1059,7 +1084,9 @@
     }
    ],
    "source": [
-    "pd.DataFrame(index=sllh.keys(), data=dict(amici=sllh.values(), jax=np.asarray(sllh_jax)))"
+    "pd.DataFrame(\n",
+    "    index=sllh.keys(), data=dict(amici=sllh.values(), jax=np.asarray(sllh_jax))\n",
+    ")"
    ]
   }
  ],
