--- a/python/examples/example_jax/ExampleJax.ipynb
+++ b/python/examples/example_jax/ExampleJax.ipynb
@@ -46,8 +46,9 @@
    "outputs": [],
    "source": [
     "import petab\n",
+    "\n",
     "model_name = \"Boehm_JProteomeRes2014\"\n",
-    "yaml_file = f'https://raw.githubusercontent.com/Benchmarking-Initiative/Benchmark-Models-PEtab/master/Benchmark-Models/{model_name}/{model_name}.yaml'\n",
+    "yaml_file = f\"https://raw.githubusercontent.com/Benchmarking-Initiative/Benchmark-Models-PEtab/master/Benchmark-Models/{model_name}/{model_name}.yaml\"\n",
     "petab_problem = petab.Problem.from_yaml(yaml_file)"
    ]
   },
@@ -262,7 +263,10 @@
    "outputs": [],
    "source": [
     "from amici.petab_import import import_petab_problem\n",
-    "amici_model = import_petab_problem(petab_problem, force_compile=True, verbose=False)"
+    "\n",
+    "amici_model = import_petab_problem(\n",
+    "    petab_problem, force_compile=True, verbose=False\n",
+    ")"
    ]
   },
   {
@@ -292,13 +296,15 @@
    "source": [
     "from amici.petab_objective import simulate_petab\n",
     "import amici\n",
+    "\n",
     "amici_solver = amici_model.getSolver()\n",
     "amici_solver.setSensitivityOrder(amici.SensitivityOrder.first)\n",
     "\n",
+    "\n",
     "def amici_hcb_base(parameters: jnp.array):\n",
     "    return simulate_petab(\n",
-    "        petab_problem, \n",
-    "        amici_model, \n",
+    "        petab_problem,\n",
+    "        amici_model,\n",
     "        problem_parameters=dict(zip(petab_problem.x_free_ids, parameters)),\n",
     "        solver=amici_solver,\n",
     "    )"
@@ -320,13 +326,14 @@
    "outputs": [],
    "source": [
     "def amici_hcb_llh(parameters: jnp.array):\n",
-    "    return amici_hcb_base(parameters)['llh']\n",
+    "    return amici_hcb_base(parameters)[\"llh\"]\n",
+    "\n",
     "\n",
     "def amici_hcb_sllh(parameters: jnp.array):\n",
-    "    sllh = amici_hcb_base(parameters)['sllh']\n",
-    "    return jnp.asarray(tuple(\n",
-    "        sllh[par_id] for par_id in petab_problem.x_free_ids\n",
-    "    ))"
+    "    sllh = amici_hcb_base(parameters)[\"sllh\"]\n",
+    "    return jnp.asarray(\n",
+    "        tuple(sllh[par_id] for par_id in petab_problem.x_free_ids)\n",
+    "    )"
    ]
   },
   {
@@ -348,6 +355,8 @@
     "from jax import custom_jvp\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
     "@custom_jvp\n",
     "def jax_objective(parameters: jnp.array):\n",
     "    return hcb.call(\n",
@@ -380,7 +389,9 @@
     "    sllh = hcb.call(\n",
     "        amici_hcb_sllh,\n",
     "        parameters,\n",
-    "        result_shape=jax.ShapeDtypeStruct((petab_problem.parameter_df.estimate.sum(),), np.float64),\n",
+    "        result_shape=jax.ShapeDtypeStruct(\n",
+    "            (petab_problem.parameter_df.estimate.sum(),), np.float64\n",
+    "        ),\n",
     "    )\n",
     "    return llh, sllh.dot(x_dot)"
    ]
@@ -402,18 +413,25 @@
    "source": [
     "from jax import value_and_grad\n",
     "\n",
-    "parameter_scales = petab_problem.parameter_df.loc[petab_problem.x_free_ids, petab.PARAMETER_SCALE].values\n",
+    "parameter_scales = petab_problem.parameter_df.loc[\n",
+    "    petab_problem.x_free_ids, petab.PARAMETER_SCALE\n",
+    "].values\n",
+    "\n",
     "\n",
     "@jax.jit\n",
     "@value_and_grad\n",
     "def jax_objective_with_parameter_transform(parameters: jnp.array):\n",
-    "    par_scaled = jnp.asarray(tuple(\n",
-    "        value if scale == petab.LIN\n",
-    "        else jnp.exp(value) if scale == petab.LOG\n",
-    "        else jnp.power(10, value)\n",
-    "        for value, scale in zip(parameters, parameter_scales)\n",
-    "    ))\n",
-    "    return jax_objective(par_scaled)\n"
+    "    par_scaled = jnp.asarray(\n",
+    "        tuple(\n",
+    "            value\n",
+    "            if scale == petab.LIN\n",
+    "            else jnp.exp(value)\n",
+    "            if scale == petab.LOG\n",
+    "            else jnp.power(10, value)\n",
+    "            for value, scale in zip(parameters, parameter_scales)\n",
+    "        )\n",
+    "    )\n",
+    "    return jax_objective(par_scaled)"
    ]
   },
   {
@@ -445,7 +463,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(scaled_parameters_np)"
+    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(\n",
+    "    scaled_parameters_np\n",
+    ")"
    ]
   },
   {
@@ -464,12 +484,12 @@
    "outputs": [],
    "source": [
     "r = simulate_petab(\n",
-    "    petab_problem, \n",
-    "    amici_model, \n",
+    "    petab_problem,\n",
+    "    amici_model,\n",
     "    solver=amici_solver,\n",
     "    scaled_parameters=True,\n",
     "    scaled_gradients=True,\n",
-    "    problem_parameters=scaled_parameters\n",
+    "    problem_parameters=scaled_parameters,\n",
     ")"
    ]
   },
@@ -528,7 +548,15 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(dict(amici=r['llh'], jax=float(llh_jax), rel_diff=(r['llh']-float(llh_jax))/r['llh']), index=('llh',))"
+    "\n",
+    "pd.DataFrame(\n",
+    "    dict(\n",
+    "        amici=r[\"llh\"],\n",
+    "        jax=float(llh_jax),\n",
+    "        rel_diff=(r[\"llh\"] - float(llh_jax)) / r[\"llh\"],\n",
+    "    ),\n",
+    "    index=(\"llh\",),\n",
+    ")"
    ]
   },
   {
@@ -641,10 +669,13 @@
     }
    ],
    "source": [
-    "grad_amici=np.asarray(list(r['sllh'].values()))\n",
-    "grad_jax=np.asarray(sllh_jax)\n",
-    "rel_diff=(grad_amici-grad_jax)/grad_jax\n",
-    "pd.DataFrame(index=r['sllh'].keys(), data=dict(amici=grad_amici, jax=grad_jax, rel_diff=rel_diff))"
+    "grad_amici = np.asarray(list(r[\"sllh\"].values()))\n",
+    "grad_jax = np.asarray(sllh_jax)\n",
+    "rel_diff = (grad_amici - grad_jax) / grad_jax\n",
+    "pd.DataFrame(\n",
+    "    index=r[\"sllh\"].keys(),\n",
+    "    data=dict(amici=grad_amici, jax=grad_jax, rel_diff=rel_diff),\n",
+    ")"
    ]
   },
   {
@@ -664,7 +695,9 @@
    "outputs": [],
    "source": [
     "jax.config.update(\"jax_enable_x64\", True)\n",
-    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(scaled_parameters_np)"
+    "llh_jax, sllh_jax = jax_objective_with_parameter_transform(\n",
+    "    scaled_parameters_np\n",
+    ")"
    ]
   },
   {
@@ -729,7 +762,14 @@
     }
    ],
    "source": [
-    "pd.DataFrame(dict(amici=r['llh'], jax=float(llh_jax), rel_diff=(r['llh']-float(llh_jax))/r['llh']), index=('llh',))"
+    "pd.DataFrame(\n",
+    "    dict(\n",
+    "        amici=r[\"llh\"],\n",
+    "        jax=float(llh_jax),\n",
+    "        rel_diff=(r[\"llh\"] - float(llh_jax)) / r[\"llh\"],\n",
+    "    ),\n",
+    "    index=(\"llh\",),\n",
+    ")"
    ]
   },
   {
@@ -842,10 +882,13 @@
     }
    ],
    "source": [
-    "grad_amici=np.asarray(list(r['sllh'].values()))\n",
-    "grad_jax=np.asarray(sllh_jax)\n",
-    "rel_diff=(grad_amici-grad_jax)/grad_jax\n",
-    "pd.DataFrame(index=r['sllh'].keys(), data=dict(amici=grad_amici, jax=grad_jax, rel_diff=rel_diff))"
+    "grad_amici = np.asarray(list(r[\"sllh\"].values()))\n",
+    "grad_jax = np.asarray(sllh_jax)\n",
+    "rel_diff = (grad_amici - grad_jax) / grad_jax\n",
+    "pd.DataFrame(\n",
+    "    index=r[\"sllh\"].keys(),\n",
+    "    data=dict(amici=grad_amici, jax=grad_jax, rel_diff=rel_diff),\n",
+    ")"
    ]
   }
  ],
