--- a/python/examples/example_large_models/example_performance_optimization.ipynb
+++ b/python/examples/example_large_models/example_performance_optimization.ipynb
@@ -39,7 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "plt.rcParams.update({'font.size': 12})"
+    "plt.rcParams.update({\"font.size\": 12})"
    ]
   },
   {
@@ -122,7 +122,9 @@
     "plt.bar([\"True\", \"False\"], [873.54, 697.85])\n",
     "plt.xlabel(\"generate_sensitivity_code\")\n",
     "plt.ylabel(\"Import time (s)\")\n",
-    "plt.title(\"Import speed-up when not generating sensitivity code\\n(Froehlich_CellSystems2018)\");\n",
+    "plt.title(\n",
+    "    \"Import speed-up when not generating sensitivity code\\n(Froehlich_CellSystems2018)\"\n",
+    ")\n",
     "plt.show()\n",
     "\n",
     "print(f\"speedup: {873.54/697.85:.2f}x\")"
@@ -217,9 +219,11 @@
     "    plt.ylabel(\"Import time (s)\")\n",
     "    plt.ylim(ymin=0)\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    import_times = df.sort_values(\"nprocs\")[\"time\"].values\n",
-    "    percent_change = (import_times[0] - min(import_times[1:])) / import_times[0] * 100\n",
+    "    percent_change = (\n",
+    "        (import_times[0] - min(import_times[1:])) / import_times[0] * 100\n",
+    "    )\n",
     "    if percent_change > 0:\n",
     "        print(f\"Import time decreased by up to ~{percent_change:.0f}%.\")\n",
     "    else:\n",
@@ -281,14 +285,19 @@
    "source": [
     "figsize(8, 4)\n",
     "compilation_time_s = [3022.453, 289.518]\n",
-    "labels = [\"g++ (Ubuntu 12.2.0-3ubuntu1) 12.2.0\", \"Ubuntu clang version 15.0.2-1\"]\n",
+    "labels = [\n",
+    "    \"g++ (Ubuntu 12.2.0-3ubuntu1) 12.2.0\",\n",
+    "    \"Ubuntu clang version 15.0.2-1\",\n",
+    "]\n",
     "plt.bar(labels, compilation_time_s)\n",
     "plt.ylim(ymin=0)\n",
     "plt.title(\"Choice of compiler - FröhlichGer2022\")\n",
     "plt.xlabel(\"Compiler\")\n",
-    "plt.ylabel(\"Walltime for compilation (s)\");\n",
+    "plt.ylabel(\"Walltime for compilation (s)\")\n",
     "plt.show()\n",
-    "print(f\"Clang was ~{compilation_time_s[0] / compilation_time_s[1]:.0f}x as fast as g++.\")"
+    "print(\n",
+    "    f\"Clang was ~{compilation_time_s[0] / compilation_time_s[1]:.0f}x as fast as g++.\"\n",
+    ")"
    ]
   },
   {
@@ -360,10 +369,12 @@
     "    plt.ylabel(\"Compile time (s)\")\n",
     "    plt.ylim(ymin=0)\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    compilation_time_s = df.sort_values(\"nprocs\")[\"time\"].values\n",
-    "    print(\"We were able to reduce compile time by up to \"\n",
-    "          f\"~{(compilation_time_s[0] - min(compilation_time_s[1:])) / compilation_time_s[0] * 100:.0f}%.\")"
+    "    print(\n",
+    "        \"We were able to reduce compile time by up to \"\n",
+    "        f\"~{(compilation_time_s[0] - min(compilation_time_s[1:])) / compilation_time_s[0] * 100:.0f}%.\"\n",
+    "    )"
    ]
   },
   {
