--- a/python/examples/example_petab/petab.ipynb
+++ b/python/examples/example_petab/petab.ipynb
@@ -39,10 +39,10 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'tmp/benchmark-models'...\n",
-      "remote: Enumerating objects: 142, done.\u001B[K\n",
-      "remote: Counting objects: 100% (142/142), done.\u001B[K\n",
-      "remote: Compressing objects: 100% (122/122), done.\u001B[K\n",
-      "remote: Total 142 (delta 41), reused 104 (delta 18), pack-reused 0\u001B[K\n",
+      "remote: Enumerating objects: 142, done.\u001b[K\n",
+      "remote: Counting objects: 100% (142/142), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (122/122), done.\u001b[K\n",
+      "remote: Total 142 (delta 41), reused 104 (delta 18), pack-reused 0\u001b[K\n",
       "Receiving objects: 100% (142/142), 648.29 KiB | 1.23 MiB/s, done.\n",
       "Resolving deltas: 100% (41/41), done.\n"
      ]
@@ -335,10 +335,15 @@
    ],
    "source": [
     "parameters = {\n",
-    "    x_id: x_val for x_id, x_val in\n",
-    "    zip(petab_problem.x_ids, petab_problem.x_nominal_scaled)\n",
+    "    x_id: x_val\n",
+    "    for x_id, x_val in zip(petab_problem.x_ids, petab_problem.x_nominal_scaled)\n",
     "}\n",
-    "simulate_petab(petab_problem, amici_model, problem_parameters=parameters, scaled_parameters=True)"
+    "simulate_petab(\n",
+    "    petab_problem,\n",
+    "    amici_model,\n",
+    "    problem_parameters=parameters,\n",
+    "    scaled_parameters=True,\n",
+    ")"
    ]
   },
   {
