--- a/python/examples/example_splines/ExampleSplines.ipynb
+++ b/python/examples/example_splines/ExampleSplines.ipynb
@@ -40,36 +40,61 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "# Choose build directory\n",
-    "BUILD_PATH = None # temporary folder\n",
+    "BUILD_PATH = None  # temporary folder\n",
     "# BUILD_PATH = 'build' # specified folder for debugging\n",
     "if BUILD_PATH is not None:\n",
     "    # Remove previous models\n",
     "    rmtree(BUILD_PATH, ignore_errors=True)\n",
     "    os.mkdir(BUILD_PATH)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def simulate(sbml_model, parameters=None, *, model_name=None, **kwargs):\n",
     "    if model_name is None:\n",
-    "        model_name = 'model_' + uuid1().hex\n",
+    "        model_name = \"model_\" + uuid1().hex\n",
     "    if BUILD_PATH is None:\n",
     "        with TemporaryDirectory() as build_dir:\n",
-    "            return _simulate(sbml_model, parameters, build_dir=build_dir, model_name=model_name, **kwargs)\n",
+    "            return _simulate(\n",
+    "                sbml_model,\n",
+    "                parameters,\n",
+    "                build_dir=build_dir,\n",
+    "                model_name=model_name,\n",
+    "                **kwargs\n",
+    "            )\n",
     "    else:\n",
     "        build_dir = os.path.join(BUILD_PATH, model_name)\n",
     "        rmtree(build_dir, ignore_errors=True)\n",
-    "        return _simulate(sbml_model, parameters, build_dir=build_dir, model_name=model_name, **kwargs)\n",
+    "        return _simulate(\n",
+    "            sbml_model,\n",
+    "            parameters,\n",
+    "            build_dir=build_dir,\n",
+    "            model_name=model_name,\n",
+    "            **kwargs\n",
+    "        )\n",
     "\n",
-    "def _simulate(sbml_model, parameters, *, build_dir, model_name, T=1, discard_annotations=False, plot=True):\n",
+    "\n",
+    "def _simulate(\n",
+    "    sbml_model,\n",
+    "    parameters,\n",
+    "    *,\n",
+    "    build_dir,\n",
+    "    model_name,\n",
+    "    T=1,\n",
+    "    discard_annotations=False,\n",
+    "    plot=True\n",
+    "):\n",
     "    if parameters is None:\n",
     "        parameters = {}\n",
     "    # Build the model module from the SBML file\n",
-    "    sbml_importer = amici.SbmlImporter(sbml_model, discard_annotations=discard_annotations)\n",
+    "    sbml_importer = amici.SbmlImporter(\n",
+    "        sbml_model, discard_annotations=discard_annotations\n",
+    "    )\n",
     "    sbml_importer.sbml2amici(model_name, build_dir)\n",
     "    # Import the model module\n",
     "    sys.path.insert(0, os.path.abspath(build_dir))\n",
     "    model_module = import_module(model_name)\n",
     "    # Setup simulation timepoints and parameters\n",
     "    model = model_module.getModel()\n",
-    "    for (name, value) in parameters.items():\n",
+    "    for name, value in parameters.items():\n",
     "        model.setParameterByName(name, value)\n",
     "    if isinstance(T, (int, float)):\n",
     "        T = np.linspace(0, T, 100)\n",
@@ -82,7 +107,7 @@
     "    # Plot results\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(rdata['t'], rdata['x'])\n",
+    "        ax.plot(rdata[\"t\"], rdata[\"x\"])\n",
     "        ax.set_xlabel(\"time\")\n",
     "        ax.set_ylabel(\"concentration\")\n",
     "    return model, rdata"
@@ -161,7 +186,7 @@
     }
    ],
    "source": [
-    "simulate('example_splines.xml', dict(f=1));"
+    "simulate(\"example_splines.xml\", dict(f=1));"
    ]
   },
   {
@@ -204,8 +229,8 @@
    "source": [
     "# Create a spline object\n",
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
-    "    evaluate_at=amici.sbml_utils.amici_time_symbol, # the spline function is evaluated at the current time point\n",
+    "    sbml_id=\"f\",\n",
+    "    evaluate_at=amici.sbml_utils.amici_time_symbol,  # the spline function is evaluated at the current time point\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[1, -1, 2],\n",
     ")"
@@ -256,7 +281,7 @@
    ],
    "source": [
     "# Plot the spline\n",
-    "spline.plot(xlabel='time');"
+    "spline.plot(xlabel=\"time\");"
    ]
   },
   {
@@ -269,7 +294,8 @@
    "source": [
     "# Load SBML model using libsbml\n",
     "import libsbml\n",
-    "sbml_doc = libsbml.SBMLReader().readSBML('example_splines.xml')\n",
+    "\n",
+    "sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
     "sbml_model = sbml_doc.getModel()\n",
     "# We can add the spline assignment rule to the SBML model\n",
     "spline.add_to_sbml_model(sbml_model)"
@@ -307,7 +333,7 @@
    "outputs": [],
    "source": [
     "# Final value should be equal to the integral computed above\n",
-    "assert np.allclose(rdata['x'][-1], float(spline.integrate(0.0, 1.0)))"
+    "assert np.allclose(rdata[\"x\"][-1], float(spline.integrate(0.0, 1.0)))"
    ]
   },
   {
@@ -466,10 +492,10 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
-    "    values_at_nodes=sp.symbols('f0:3'),\n",
+    "    values_at_nodes=sp.symbols(\"f0:3\"),\n",
     ")"
    ]
   },
@@ -481,7 +507,7 @@
    },
    "outputs": [],
    "source": [
-    "sbml_doc = libsbml.SBMLReader().readSBML('example_splines.xml')\n",
+    "sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
     "sbml_model = sbml_doc.getModel()\n",
     "spline.add_to_sbml_model(\n",
     "    sbml_model,\n",
@@ -520,7 +546,7 @@
     }
    ],
    "source": [
-    "spline.plot(parameters, xlabel='time');"
+    "spline.plot(parameters, xlabel=\"time\");"
    ]
   },
   {
@@ -566,9 +592,9 @@
    "source": [
     "# Sensitivities with respect to the spline values can be computed\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(rdata['t'], rdata.sx[:, 0], label=model.getParameterNames()[0])\n",
-    "ax.plot(rdata['t'], rdata.sx[:, 1], label=model.getParameterNames()[1])\n",
-    "ax.plot(rdata['t'], rdata.sx[:, 2], label=model.getParameterNames()[2])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 0], label=model.getParameterNames()[0])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 1], label=model.getParameterNames()[1])\n",
+    "ax.plot(rdata[\"t\"], rdata.sx[:, 2], label=model.getParameterNames()[2])\n",
     "ax.set_xlabel(\"time\")\n",
     "ax.set_ylabel(\"sensitivity\")\n",
     "ax.legend();"
@@ -600,7 +626,7 @@
    "source": [
     "# A simple spline for which finite differencing would give a different result\n",
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[1.0, -1.0, 1.0],\n",
@@ -627,7 +653,7 @@
     }
    ],
    "source": [
-    "spline.plot(xlabel='time');"
+    "spline.plot(xlabel=\"time\");"
    ]
   },
   {
@@ -650,7 +676,7 @@
    ],
    "source": [
     "# Simulation\n",
-    "sbml_doc = libsbml.SBMLReader().readSBML('example_splines.xml')\n",
+    "sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
     "sbml_model = sbml_doc.getModel()\n",
     "spline.add_to_sbml_model(sbml_model)\n",
     "simulate(sbml_model, T=1);"
@@ -698,11 +724,14 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
     "    values_at_nodes=[-2, 1, -1],\n",
-    "    extrapolate=(None, 'constant'), # no extrapolation required on the left side\n",
+    "    extrapolate=(\n",
+    "        None,\n",
+    "        \"constant\",\n",
+    "    ),  # no extrapolation required on the left side\n",
     ")"
    ]
   },
@@ -725,7 +754,7 @@
     }
    ],
    "source": [
-    "spline.plot(xlabel='time', xlim=(0, 1.5));"
+    "spline.plot(xlabel=\"time\", xlim=(0, 1.5));"
    ]
   },
   {
@@ -747,7 +776,7 @@
     }
    ],
    "source": [
-    "sbml_doc = libsbml.SBMLReader().readSBML('example_splines.xml')\n",
+    "sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
     "sbml_model = sbml_doc.getModel()\n",
     "spline.add_to_sbml_model(sbml_model)\n",
     "simulate(sbml_model, T=1.5);"
@@ -790,11 +819,11 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=3),\n",
-    "    values_at_nodes=[-2, 1, -2], # first and last node must coincide\n",
-    "    extrapolate='periodic',\n",
+    "    values_at_nodes=[-2, 1, -2],  # first and last node must coincide\n",
+    "    extrapolate=\"periodic\",\n",
     ")"
    ]
   },
@@ -817,7 +846,7 @@
     }
    ],
    "source": [
-    "spline.plot(xlabel='time', xlim=(0, 3));"
+    "spline.plot(xlabel=\"time\", xlim=(0, 3));"
    ]
   },
   {
@@ -839,7 +868,7 @@
     }
    ],
    "source": [
-    "sbml_doc = libsbml.SBMLReader().readSBML('example_splines.xml')\n",
+    "sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
     "sbml_model = sbml_doc.getModel()\n",
     "spline.add_to_sbml_model(sbml_model)\n",
     "simulate(sbml_model, T=3);"
@@ -882,11 +911,11 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=4),\n",
     "    values_at_nodes=[-1, 2, 4, 2],\n",
-    "    bc='zeroderivative',\n",
+    "    bc=\"zeroderivative\",\n",
     ")"
    ]
   },
@@ -909,7 +938,7 @@
     }
    ],
    "source": [
-    "spline.plot(xlabel='time');"
+    "spline.plot(xlabel=\"time\");"
    ]
   },
   {
@@ -941,11 +970,11 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=4),\n",
     "    values_at_nodes=[-1, 2, 4, 2],\n",
-    "    bc='natural',\n",
+    "    bc=\"natural\",\n",
     ")"
    ]
   },
@@ -968,7 +997,7 @@
     }
    ],
    "source": [
-    "spline.plot(xlabel='time');"
+    "spline.plot(xlabel=\"time\");"
    ]
   },
   {
@@ -1007,7 +1036,7 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=5),\n",
     "    values_at_nodes=[2, 0.05, 0.1, 2, 1],\n",
@@ -1034,7 +1063,7 @@
    ],
    "source": [
     "# This spline assumes negative values!\n",
-    "spline.plot(xlabel='time');"
+    "spline.plot(xlabel=\"time\");"
    ]
   },
   {
@@ -1046,7 +1075,7 @@
    "outputs": [],
    "source": [
     "spline = amici.splines.CubicHermiteSpline(\n",
-    "    sbml_id='f',\n",
+    "    sbml_id=\"f\",\n",
     "    evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "    nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=5),\n",
     "    values_at_nodes=[2, 0.05, 0.1, 2, 1],\n",
@@ -1075,7 +1104,7 @@
    "source": [
     "# Instead of under-shooting we now have over-shooting,\n",
     "# but at least the \"spline\" is always positive\n",
-    "spline.plot(xlabel='time');"
+    "spline.plot(xlabel=\"time\");"
    ]
   },
   {
@@ -1121,9 +1150,27 @@
    },
    "outputs": [],
    "source": [
-    "nruns = 6 # number of replicates\n",
-    "num_nodes = [5, 10, 15, 20, 25, 30, 40] # benchmark model import for these node numbers\n",
-    "amici_only_nodes = [50, 75, 100, 125, 150, 175, 200, 225, 250] # for these node numbers, only benchmark the annotation-based implementation"
+    "nruns = 6  # number of replicates\n",
+    "num_nodes = [\n",
+    "    5,\n",
+    "    10,\n",
+    "    15,\n",
+    "    20,\n",
+    "    25,\n",
+    "    30,\n",
+    "    40,\n",
+    "]  # benchmark model import for these node numbers\n",
+    "amici_only_nodes = [\n",
+    "    50,\n",
+    "    75,\n",
+    "    100,\n",
+    "    125,\n",
+    "    150,\n",
+    "    175,\n",
+    "    200,\n",
+    "    225,\n",
+    "    250,\n",
+    "]  # for these node numbers, only benchmark the annotation-based implementation"
    ]
   },
   {
@@ -1133,7 +1180,7 @@
    "outputs": [],
    "source": [
     "# If running as a Github action, just do the minimal amount of work required to check whether the code is working\n",
-    "if os.getenv('GITHUB_ACTIONS') is not None:\n",
+    "if os.getenv(\"GITHUB_ACTIONS\") is not None:\n",
     "    nruns = 1\n",
     "    num_nodes = [4]\n",
     "    amici_only_nodes = [5]"
@@ -1151,12 +1198,12 @@
     "for n in num_nodes + amici_only_nodes:\n",
     "    # Create model\n",
     "    spline = amici.splines.CubicHermiteSpline(\n",
-    "        sbml_id='f',\n",
+    "        sbml_id=\"f\",\n",
     "        evaluate_at=amici.sbml_utils.amici_time_symbol,\n",
     "        nodes=amici.splines.UniformGrid(0, 1, number_of_nodes=n),\n",
     "        values_at_nodes=np.random.rand(n),\n",
     "    )\n",
-    "    sbml_doc = libsbml.SBMLReader().readSBML('example_splines.xml')\n",
+    "    sbml_doc = libsbml.SBMLReader().readSBML(\"example_splines.xml\")\n",
     "    sbml_model = sbml_doc.getModel()\n",
     "    spline.add_to_sbml_model(sbml_model)\n",
     "    # Benchmark model creation\n",
@@ -1165,22 +1212,34 @@
     "    for _ in range(nruns):\n",
     "        with tempfile.TemporaryDirectory() as tmpdir:\n",
     "            t0 = time.perf_counter_ns()\n",
-    "            amici.SbmlImporter(sbml_model).sbml2amici('benchmark', tmpdir)\n",
+    "            amici.SbmlImporter(sbml_model).sbml2amici(\"benchmark\", tmpdir)\n",
     "            dt = time.perf_counter_ns() - t0\n",
     "            timings_amici.append(dt / 1e9)\n",
     "        if n in num_nodes:\n",
     "            with tempfile.TemporaryDirectory() as tmpdir:\n",
     "                t0 = time.perf_counter_ns()\n",
-    "                amici.SbmlImporter(sbml_model, discard_annotations=True).sbml2amici('benchmark', tmpdir)\n",
+    "                amici.SbmlImporter(\n",
+    "                    sbml_model, discard_annotations=True\n",
+    "                ).sbml2amici(\"benchmark\", tmpdir)\n",
     "                dt = time.perf_counter_ns() - t0\n",
     "                timings_piecewise.append(dt / 1e9)\n",
     "    # Append benchmark data to dataframe\n",
-    "    df_amici = pd.DataFrame(dict(num_nodes=n, time=timings_amici, use_annotations=True))\n",
-    "    df_piecewise = pd.DataFrame(dict(num_nodes=n, time=timings_piecewise, use_annotations=False))\n",
+    "    df_amici = pd.DataFrame(\n",
+    "        dict(num_nodes=n, time=timings_amici, use_annotations=True)\n",
+    "    )\n",
+    "    df_piecewise = pd.DataFrame(\n",
+    "        dict(num_nodes=n, time=timings_piecewise, use_annotations=False)\n",
+    "    )\n",
     "    if df is None:\n",
-    "        df = pd.concat([df_amici, df_piecewise], ignore_index=True, verify_integrity=True)\n",
+    "        df = pd.concat(\n",
+    "            [df_amici, df_piecewise], ignore_index=True, verify_integrity=True\n",
+    "        )\n",
     "    else:\n",
-    "        df = pd.concat([df, df_amici, df_piecewise], ignore_index=True, verify_integrity=True)"
+    "        df = pd.concat(\n",
+    "            [df, df_amici, df_piecewise],\n",
+    "            ignore_index=True,\n",
+    "            verify_integrity=True,\n",
+    "        )"
    ]
   },
   {
@@ -1203,19 +1262,62 @@
    ],
    "source": [
     "kwargs = dict(markersize=7.5)\n",
-    "df_avg = df.groupby(['use_annotations', 'num_nodes']).mean().reset_index()\n",
+    "df_avg = df.groupby([\"use_annotations\", \"num_nodes\"]).mean().reset_index()\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6.5, 3.5))\n",
-    "ax.plot(df_avg[np.logical_not(df_avg['use_annotations'])]['num_nodes'], df_avg[np.logical_not(df_avg['use_annotations'])]['time'], '.', label='MathML piecewise', **kwargs)\n",
-    "ax.plot(df_avg[df_avg['use_annotations']]['num_nodes'], df_avg[df_avg['use_annotations']]['time'], '.', label='AMICI annotations', **kwargs)\n",
-    "ax.set_ylabel('model import time (s)')\n",
-    "ax.set_xlabel('number of spline nodes')\n",
-    "ax.set_yscale('log')\n",
-    "ax.yaxis.set_major_formatter(mpl.ticker.FuncFormatter(lambda x, pos: f\"{x:.0f}\"))\n",
-    "ax.xaxis.set_ticks([10, 20, 30, 40, 60, 70, 80, 90, 110, 120, 130, 140, 160, 170, 180, 190, 210, 220, 230, 240, 260], minor=True)\n",
-    "ax.yaxis.set_ticks([20, 30, 40, 50, 60, 70, 80, 90, 200, 300, 400], ['20', '30', '40', '50', None, None, None, None, '200', '300', '400'], minor=True)\n",
+    "ax.plot(\n",
+    "    df_avg[np.logical_not(df_avg[\"use_annotations\"])][\"num_nodes\"],\n",
+    "    df_avg[np.logical_not(df_avg[\"use_annotations\"])][\"time\"],\n",
+    "    \".\",\n",
+    "    label=\"MathML piecewise\",\n",
+    "    **kwargs,\n",
+    ")\n",
+    "ax.plot(\n",
+    "    df_avg[df_avg[\"use_annotations\"]][\"num_nodes\"],\n",
+    "    df_avg[df_avg[\"use_annotations\"]][\"time\"],\n",
+    "    \".\",\n",
+    "    label=\"AMICI annotations\",\n",
+    "    **kwargs,\n",
+    ")\n",
+    "ax.set_ylabel(\"model import time (s)\")\n",
+    "ax.set_xlabel(\"number of spline nodes\")\n",
+    "ax.set_yscale(\"log\")\n",
+    "ax.yaxis.set_major_formatter(\n",
+    "    mpl.ticker.FuncFormatter(lambda x, pos: f\"{x:.0f}\")\n",
+    ")\n",
+    "ax.xaxis.set_ticks(\n",
+    "    [\n",
+    "        10,\n",
+    "        20,\n",
+    "        30,\n",
+    "        40,\n",
+    "        60,\n",
+    "        70,\n",
+    "        80,\n",
+    "        90,\n",
+    "        110,\n",
+    "        120,\n",
+    "        130,\n",
+    "        140,\n",
+    "        160,\n",
+    "        170,\n",
+    "        180,\n",
+    "        190,\n",
+    "        210,\n",
+    "        220,\n",
+    "        230,\n",
+    "        240,\n",
+    "        260,\n",
+    "    ],\n",
+    "    minor=True,\n",
+    ")\n",
+    "ax.yaxis.set_ticks(\n",
+    "    [20, 30, 40, 50, 60, 70, 80, 90, 200, 300, 400],\n",
+    "    [\"20\", \"30\", \"40\", \"50\", None, None, None, None, \"200\", \"300\", \"400\"],\n",
+    "    minor=True,\n",
+    ")\n",
     "ax.legend()\n",
     "ax.figure.tight_layout()\n",
-    "#ax.figure.savefig('benchmark_import.pdf')"
+    "# ax.figure.savefig('benchmark_import.pdf')"
    ]
   }
  ],
