--- a/documentation/GettingStarted.ipynb
+++ b/documentation/GettingStarted.ipynb
@@ -26,7 +26,8 @@
    "outputs": [],
    "source": [
     "import amici\n",
-    "sbml_importer = amici.SbmlImporter('model_steadystate_scaled.xml')"
+    "\n",
+    "sbml_importer = amici.SbmlImporter(\"model_steadystate_scaled.xml\")"
    ]
   },
   {
@@ -42,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = 'model_steadystate'\n",
-    "model_dir = 'model_dir'\n",
+    "model_name = \"model_steadystate\"\n",
+    "model_dir = \"model_dir\"\n",
     "sbml_importer.sbml2amici(model_name, model_dir)"
    ]
   },
@@ -82,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.setParameterByName('p1',1e-3)"
+    "model.setParameterByName(\"p1\", 1e-3)"
    ]
   },
   {
@@ -122,7 +123,7 @@
    "outputs": [],
    "source": [
     "# set timepoints\n",
-    "model.setTimepoints([0,1])\n",
+    "model.setTimepoints([0, 1])\n",
     "rdata = amici.runAmiciSimulation(model, solver)"
    ]
   },
