--- a/python/examples/example_presimulation/ExampleExperimentalConditions.ipynb
+++ b/python/examples/example_presimulation/ExampleExperimentalConditions.ipynb
@@ -15,9 +15,9 @@
    "outputs": [],
    "source": [
     "# SBML model we want to import\n",
-    "sbml_file = 'model_presimulation.xml'\n",
+    "sbml_file = \"model_presimulation.xml\"\n",
     "# Name of the model that will also be the name of the python module\n",
-    "model_name = 'model_presimulation'\n",
+    "model_name = \"model_presimulation\"\n",
     "# Directory to which the generated model code is written\n",
     "model_output_dir = model_name\n",
     "\n",
@@ -86,22 +86,45 @@
     "sbml_doc = sbml_reader.readSBML(sbml_file)\n",
     "sbml_model = sbml_doc.getModel()\n",
     "\n",
-    "print('Species:')\n",
-    "pprint([(s.getId(),s.getName()) for s in sbml_model.getListOfSpecies()])\n",
+    "print(\"Species:\")\n",
+    "pprint([(s.getId(), s.getName()) for s in sbml_model.getListOfSpecies()])\n",
     "\n",
-    "print('\\nReactions:')\n",
+    "print(\"\\nReactions:\")\n",
     "for reaction in sbml_model.getListOfReactions():\n",
-    "    reactants = ' + '.join(['%s %s'%(int(r.getStoichiometry()) if r.getStoichiometry() > 1 else '', r.getSpecies()) for r in reaction.getListOfReactants()])\n",
-    "    products  = ' + '.join(['%s %s'%(int(r.getStoichiometry()) if r.getStoichiometry() > 1 else '', r.getSpecies()) for r in reaction.getListOfProducts()])\n",
-    "    reversible = '<' if reaction.getReversible() else ''\n",
-    "    print('%3s: %10s %1s->%10s\\t\\t[%s]' % (reaction.getName(), \n",
-    "                        reactants,\n",
-    "                        reversible,\n",
-    "                         products,\n",
-    "                        libsbml.formulaToL3String(reaction.getKineticLaw().getMath())))\n",
-    "    \n",
-    "print('Parameters:')\n",
-    "pprint([(p.getId(),p.getName()) for p in sbml_model.getListOfParameters()])"
+    "    reactants = \" + \".join(\n",
+    "        [\n",
+    "            \"%s %s\"\n",
+    "            % (\n",
+    "                int(r.getStoichiometry()) if r.getStoichiometry() > 1 else \"\",\n",
+    "                r.getSpecies(),\n",
+    "            )\n",
+    "            for r in reaction.getListOfReactants()\n",
+    "        ]\n",
+    "    )\n",
+    "    products = \" + \".join(\n",
+    "        [\n",
+    "            \"%s %s\"\n",
+    "            % (\n",
+    "                int(r.getStoichiometry()) if r.getStoichiometry() > 1 else \"\",\n",
+    "                r.getSpecies(),\n",
+    "            )\n",
+    "            for r in reaction.getListOfProducts()\n",
+    "        ]\n",
+    "    )\n",
+    "    reversible = \"<\" if reaction.getReversible() else \"\"\n",
+    "    print(\n",
+    "        \"%3s: %10s %1s->%10s\\t\\t[%s]\"\n",
+    "        % (\n",
+    "            reaction.getName(),\n",
+    "            reactants,\n",
+    "            reversible,\n",
+    "            products,\n",
+    "            libsbml.formulaToL3String(reaction.getKineticLaw().getMath()),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "print(\"Parameters:\")\n",
+    "pprint([(p.getId(), p.getName()) for p in sbml_model.getListOfParameters()])"
    ]
   },
   {
@@ -152,7 +175,12 @@
    ],
    "source": [
     "from IPython.display import IFrame\n",
-    "IFrame('https://amici.readthedocs.io/en/latest/glossary.html#term-fixed-parameters', width=600, height=175)"
+    "\n",
+    "IFrame(\n",
+    "    \"https://amici.readthedocs.io/en/latest/glossary.html#term-fixed-parameters\",\n",
+    "    width=600,\n",
+    "    height=175,\n",
+    ")"
    ]
   },
   {
@@ -161,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fixedParameters = ['DRUG_0','KIN_0']"
+    "fixedParameters = [\"DRUG_0\", \"KIN_0\"]"
    ]
   },
   {
@@ -190,10 +218,10 @@
    "source": [
     "# Retrieve model output names and formulae from AssignmentRules and remove the respective rules\n",
     "observables = amici.assignmentRules2observables(\n",
-    "        sbml_importer.sbml, # the libsbml model object\n",
-    "        filter_function=lambda variable: variable.getName() == 'pPROT' \n",
-    "    )\n",
-    "print('Observables:')\n",
+    "    sbml_importer.sbml,  # the libsbml model object\n",
+    "    filter_function=lambda variable: variable.getName() == \"pPROT\",\n",
+    ")\n",
+    "print(\"Observables:\")\n",
     "pprint(observables)"
    ]
   },
@@ -210,11 +238,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sbml_importer.sbml2amici(model_name, \n",
-    "                         model_output_dir, \n",
-    "                         verbose=False,\n",
-    "                         observables=observables,\n",
-    "                         constant_parameters=fixedParameters)\n",
+    "sbml_importer.sbml2amici(\n",
+    "    model_name,\n",
+    "    model_output_dir,\n",
+    "    verbose=False,\n",
+    "    observables=observables,\n",
+    "    constant_parameters=fixedParameters,\n",
+    ")\n",
     "# load the generated module\n",
     "model_module = amici.import_model_module(model_name, model_output_dir)"
    ]
@@ -266,7 +296,7 @@
    ],
    "source": [
     "# Run simulation using default model parameters and solver options\n",
-    "model.setTimepoints(np.linspace(0, 60, 60)) \n",
+    "model.setTimepoints(np.linspace(0, 60, 60))\n",
     "rdata = amici.runAmiciSimulation(model, solver)\n",
     "amici.plotting.plotObservableTrajectories(rdata)"
    ]
@@ -298,7 +328,7 @@
    ],
    "source": [
     "edata = amici.ExpData(rdata, 0.1, 0.0)\n",
-    "edata.fixedParameters = [0,2]\n",
+    "edata.fixedParameters = [0, 2]\n",
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
     "amici.plotting.plotObservableTrajectories(rdata)"
    ]
@@ -330,7 +360,7 @@
     }
    ],
    "source": [
-    "edata.fixedParametersPreequilibration = [3,0]\n",
+    "edata.fixedParametersPreequilibration = [3, 0]\n",
     "rdata = amici.runAmiciSimulation(model, solver, edata)\n",
     "amici.plotting.plotObservableTrajectories(rdata)"
    ]
