--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1217,6 +1217,16 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://physoc.onlinelibrary.wiley.com/doi/abs/10.1113/JP284652},
 }
 
+@Unknown{HasenauerMer2023,
+  author           = {Hasenauer, Jan and Merkt, Simon and Ali, Solomon and Gudina, Esayas and Adissu, Wondimagegn and Münchhoff, Maximilian and Graf, Alexander and Krebs, Stefan and Elsbernd, Kira and Kisch, Rebecca and Sirgu, Sisay and Fantahun, Bereket and Bekele, Delayehu and Rubio-Acero, Raquel and Gashaw, Mulatu and Girma, Eyob and Yilma, Daniel and Zeynudin, Ahmed and Paunovic, Ivana and Wieser, Andreas},
+  creationdate     = {2023-09-19T09:21:01},
+  doi              = {10.21203/rs.3.rs-3307821/v1},
+  modificationdate = {2023-09-19T09:21:01},
+  month            = {09},
+  title            = {Long-term monitoring of SARS-CoV-2 seroprevalence and variants in Ethiopia provides prediction for immunity and cross-immunity},
+  year             = {2023},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
