Doc: Rename 'steadystate example'
New title + some minor updates

Closes #1990

--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "  Brief intro to AMICI for first-time users.\n",
     "\n",
-    "* [Example \"steadystate\"](../python/examples/example_steadystate/ExampleSteadystate.ipynb)\n",
+    "* [SBML import, observation model, sensitivity analysis, data export and visualization](../python/examples/example_steadystate/ExampleSteadystate.ipynb)\n",
     "\n",
     "  A more detailed introduction to the AMICI interface, demonstrating sensitivity analysis, various options, finite difference checks, ...\n",
     "\n",
