--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -920,9 +920,31 @@
    "source": [
     "import amici.plotting\n",
     "\n",
-    "amici.plotting.plotStateTrajectories(rdata, model=None)\n",
-    "amici.plotting.plotObservableTrajectories(rdata, model=None)"
+    "amici.plotting.plot_state_trajectories(rdata, model=None)\n",
+    "amici.plotting.plot_observable_trajectories(rdata, model=None)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can also evaluate symbolic expressions of model quantities using `amici.numpy.evaluate`, or directly plot the results using  `amici.plotting.plot_expressions`:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "amici.plotting.plot_expressions(\n",
+    "    \"observable_x1 + observable_x2 + observable_x3\", rdata=rdata\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
