--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -2045,7 +2045,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7",
+   "nbsphinx": {
+    "execute": "always"
+   }
   },
   "toc": {
    "base_numbering": 1,
