--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -2020,10 +2020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7",
-   "nbsphinx": {
-    "execute": "always"
-   }
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -2037,6 +2034,9 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "nbsphinx": {
+   "execute": "always"
   }
  },
  "nbformat": 4,
